--- a/Cognizant-Challenge-DarkSky/public/css/styles.css
+++ b/Cognizant-Challenge-DarkSky/public/css/styles.css
@@ -82,9 +82,11 @@
 	text-shadow: 3px 5px 8px #808080
 }
 
-.border-full
+.border-double
 {
-	margin: 30px;
-	padding: 50px;
+	margin-top: 30px;
+	/*padding-top: 30px;*/
+	margin-bottom: 30px;
+	/*padding-bottom: 30px;*/
 	border-style: double;
 }
