--- a/Cognizant-Challenge-DarkSky/public/css/styles.css
+++ b/Cognizant-Challenge-DarkSky/public/css/styles.css
@@ -39,9 +39,6 @@
     font-weight: 600;
 }
 
-.m-b-md {
-    margin-bottom: 30px;
-}
 
 .btn
 {
@@ -67,7 +64,7 @@
 {
 	text-align: center;
 	color: black;
-	font-size: 30px;
+	font-size: 36px;
 	font-family: verdana;
 	text-shadow: 3px 5px 5px #808080
 
@@ -80,6 +77,12 @@
 	font-size: 20px;
 	font-family: verdana;
 	text-shadow: 3px 5px 8px #808080
+}
+
+.small-text
+{
+	font-size: 12px;
+	color: black;
 }
 
 .border-double
