--- a/Cognizant-Challenge-DarkSky/public/css/styles.css
+++ b/Cognizant-Challenge-DarkSky/public/css/styles.css
@@ -64,18 +64,19 @@
 {
 	text-align: center;
 	font-size: 36px;
-	font-family: verdana;
+	font-family: "verdana";
 }
 
 .subheading
 {
 	text-align: center;
 	font-size: 20px;
-	font-family: verdana;
+	font-family: "verdana";
 }
 
 .small-text
 {
+	font-family: "verdana";
 	font-size: 12px;
 	font-weight: bold;
 }
@@ -96,7 +97,7 @@
 	border-radius: 20px;
 	height: 150px;
 	width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
     transition: 0.3s;
 }
 
@@ -107,8 +108,18 @@
 	border-radius: 20px;
 	height: 300px;
 	width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.5);
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
     transition: 0.3s;
+}
+
+.header
+{
+	height: 60px;
+	line-height: 60px;
+	text-align: center;
+	vertical-align: middle;
+	font-weight: bold;
+	font-family: "verdana";
 }
 
 /*___Clear night___*/
