--- a/Cognizant-Challenge-DarkSky/public/css/styles.css
+++ b/Cognizant-Challenge-DarkSky/public/css/styles.css
@@ -1,7 +1,7 @@
 .intro-body {
     background-color: #fff;
     color: #636b6f;
-    font-family: 'Raleway', sans-serif;
+    font-family: 'Lato', sans-serif;
     font-weight: 100;
     height: 100vh;
     margin: 0;
@@ -45,7 +45,7 @@
 
 .btn
 {
-    font-family: "verdana";
+    font-family: 'Lato', sans-serif;
     margin: 20px;
     padding: 20px;
     text-align: center;
@@ -64,19 +64,19 @@
 {
 	text-align: center;
 	font-size: 36px;
-	font-family: "verdana";
+	font-family: 'Lato', sans-serif;
 }
 
 .subheading
 {
 	text-align: center;
 	font-size: 20px;
-	font-family: "verdana";
+	font-family: 'Lato', sans-serif;
 }
 
 .small-text
 {
-	font-family: "verdana";
+	font-family: 'Lato', sans-serif;
 	font-size: 12px;
 	font-weight: bold;
 }
@@ -96,8 +96,7 @@
 	padding: 20px;
 	border-radius: 20px;
 	height: 150px;
-	width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
     transition: 0.3s;
 }
 
@@ -107,19 +106,17 @@
 	padding: 20px;
 	border-radius: 20px;
 	height: 300px;
-	width: 200px;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
+	box-shadow: 0 4px 8px 0 rgba(0,0,0,0.7);
     transition: 0.3s;
 }
 
 .header
 {
-	height: 60px;
 	line-height: 60px;
 	text-align: center;
 	vertical-align: middle;
 	font-weight: bold;
-	font-family: "verdana";
+	font-family: 'Lato', sans-serif;
 }
 
 /*___Clear night___*/
