--- a/Cognizant-Challenge-DarkSky/public/css/styles.css
+++ b/Cognizant-Challenge-DarkSky/public/css/styles.css
@@ -114,9 +114,12 @@
 {
 	line-height: 60px;
 	text-align: center;
-	vertical-align: middle;
+	/*vertical-align: middle;*/
 	font-weight: bold;
 	font-family: 'Lato', sans-serif;
+	/*position: fixed;
+	top: 0;
+	width: 100%*/;
 }
 
 /*___Clear night___*/
