--- a/Cognizant-Challenge-DarkSky/public/css/styles.css
+++ b/Cognizant-Challenge-DarkSky/public/css/styles.css
@@ -117,9 +117,9 @@
 	/*vertical-align: middle;*/
 	font-weight: bold;
 	font-family: 'Lato', sans-serif;
-	/*position: fixed;
+	position: fixed;
 	top: 0;
-	width: 100%*/;
+	width: 100%;
 }
 
 /*___Clear night___*/
